# git-helpers

./: .git-alias-completions.bash  .git-rc  .gitcomplete  .gitconfig  .gitignore  .gitmodules  .travis.yml  .watchmanconfig  CLAUDE.md  README.md  __init__.py  clean_branches  gfiles  git-add-mirror-remote  git-all-commits  git-bisect-commits-behind-bad  git-blames  git-branch-move  git-branch-upstream  git-branches  git-branches-behind  git-cd-to-root  git-cherry-pick-from-file  git-commit-with-message  git-conflicting-checkout-ours  git-conflicting-checkout-ours-and-continue  git-copy-diffs  git-count  git-count-commits  git-current-branch  git-diff-stat.sh  git-graph  git-hashes  git-lg  git-list-added-files  git-list-deleted  git-load-github-prs  git-make-merge-commit  git-me-push  git-me-push-force  (+34 more)
add/: .git-rc  .gitconfig  git-diff-then-maybe-add
admin/: .gitconfig  git-convert-links-to-aliases  git-find-broken-links  git-fix-broken-links  git-links  git-lookup-links  git-mv-aliases  mk-git  mk-git-alias
aliases/: .git-rc  .gitconfig  g  gbcag  gblg  git-ac  git-arc  git-bcag  git-beb  git-blg  git-bmv  git-bu  git-caane  git-cane  git-cb  git-cc  git-cd  git-ce  git-conflicting  git-coo  git-cooc  git-ct  git-ctc  git-d1  git-ds  git-git-dir  git-lb  git-lh  git-mpf  git-nb  git-rmd  git-scm  git-vgte  gn
apply/: .git-rc  .gitconfig  git-patch-branch-diff  git-safe-apply
bisect/: .git-rc  .gitconfig  git-bisect-commits-ahead-good  git-bisect-commits-behind-bad  git-bisect-head  (+4 more)
github/ghpr/: README.md  pyproject.toml
github/ghpr/src/ghpr/: __init__.py
(+520 files in other folders)
